Fix frontpage splash spacing and fonts

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -819,3 +819,7 @@ header {
 .post-list-item a {
   text-align: right;
 }
+
+.header-column {
+  min-width: 40rem;
+}
